--- a/style.css
+++ b/style.css
@@ -10,3 +10,141 @@
 }
 body {font-family: 'Poppins', sans-serif;
 }
+.container {
+    max-width: 1200px;
+    margin: 0 auto;    
+}
+.header {
+    display: flex;
+    align-items: center;
+    min-height: 70vh;
+    position: relative;
+}
+
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+}
+.logo{
+    font-size: 25px;
+    color: #ff9000;
+    text-transform: uppercase;
+    font-weight: 800;   
+}
+.menu .navbar  ul li {
+    position: relative;
+    float: left;
+}
+.menu .navbar  ul li a {
+    font-size: 18px;
+    padding: 20px;
+    font-weight: 600;
+    color: #1D1D1B;
+    display: block; 
+}
+
+.menu .navbar  ul li a:hover {
+    color: #ff9000;
+} 
+
+#menu {
+    display: none;
+}
+
+.menu-icono {
+    width: 25px;
+}
+.menu label {
+    cursor: pointer;
+    display: none;
+}
+
+.submenu {
+    position: relative;
+}
+
+.submenu #carrito {
+    display: none;
+}
+.submenu:hover #carrito {
+    display: block;
+    position: absolute;
+    right: 0;
+    backdrop-filter: blur(10px);
+    top: 100%;
+    z-index: 1;
+    background-color: #77777797;
+    padding: 20px;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+table {
+    width: 100%;
+}
+th, td {
+    color: #FFFFFF;
+}
+.borrar {
+    background-color: #ff9000;
+    border-radius: 50%;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 800;
+}
+.bg {
+    position: absolute;
+    width: 700px;
+    top: 0;
+    right: 0;
+    z-index: -1;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+}    
+
+.header-content .header-txt {
+    width: 50%;
+    margin-right: 50px;
+}
+.header-txt h1 {
+    font-size: 55px;
+    line-height: 65px;
+    color: #1D1D1B;
+    margin-bottom: 35px;
+}
+
+.header-txt p {
+    font-size: 16px;
+    color: #5E5E5E;
+    margin-bottom: 45px;
+}
+
+.header-txt span {
+    color: #FFAE00;    
+}
+
+.btn-1{
+    display: inline-block;
+    padding: 13px 45px;
+    border-radius: 25px;
+    background-color:#ff9000;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-transform: capitalize;
+    box-shadow: 0 0 20px rgba(0,0,0,0.2 );
+}
+
+.btn-1:hover{
+    background-color: #EF8700;
+}
+
