--- a/style.css
+++ b/style.css
@@ -45,12 +45,12 @@ body {font-family: 'Poppins', sans-serif;
     font-size: 18px;
     padding: 20px;
     font-weight: 600;
-    color: #1D1D1B;
+    color: #2d2d2c;
     display: block; 
 }
 
 .menu .navbar  ul li a:hover {
-    color: #ff9000;
+    color: #807a76;
 } 
 
 #menu {
@@ -148,3 +148,160 @@ th, td {
     background-color: #EF8700;
 }
 
+.header-img{
+    width: 50%;
+    text-align: right;
+}
+
+.header-img img{
+    width: 650px;
+}
+
+/* seccion breakfast */
+
+.breakfast{
+    padding: 50px 0;
+}
+
+h2{
+    font-size: 45px;
+    line-height: 55px;
+    color: #1D1D1B;
+    margin-bottom: 15px;
+}
+p{
+    font-size: 16px;
+    color: #5E5E5E;
+    margin-bottom: 45px;
+}
+
+.breakfast-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.breakfast-1{
+    display: flex;
+    align-items: center;
+    background-color: #ff9000;
+    padding: 10px;
+    border-radius: 15px;
+    width: 200px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2) ; 
+}
+
+.breakfast-1 h3 {
+    font-size: 16px;
+    color: #FFFFFF;
+    font-weight: 600;    
+}
+
+.breakfast-1 img {
+    width: 50px;
+    margin-right: 25px;
+}
+
+.info {
+    padding: 100px 0;
+    position: relative;
+}
+.bg-2 {
+    position: absolute;
+    width: 300px;
+    z-index: -1;
+    top: 50px;
+}
+
+.info-content {
+    display: flex;
+    align-items: center;
+} 
+.info-img {
+    width: 50%;
+    text-align: left;
+}
+
+.info-img img {
+    width: 450px;
+    margin-left: -50px;
+}
+
+.info-txt {
+    width: 50%;
+}
+
+/* seccion productos  */
+
+.products {
+    padding: 0 0 50px 0;
+    text-align: center;
+}
+
+.box-container {
+    margin-top: 55px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.box {
+    border-top: 2px solid #ff9000;
+    padding: 20px;
+    border-radius: 15px;
+    z-index: 1000;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    display: none;
+}
+
+.box:nth-child(1),
+.box:nth-child(2),
+.box:nth-child(3),
+.box:nth-child(4) {
+    display: inline-block;
+}
+
+.box img {
+    width: 120px;
+}
+
+.product-txt h3 {
+    font-size: 20px;
+    color: #1D1D1B;
+    margin-bottom: 10px;
+}
+
+.product-txt p {
+    margin-bottom: 25px;
+}
+
+.precio{
+    font-size: 15px;
+    color: #ff9000;
+}
+.btn-2 {
+    background-color: #ff9000;
+    margin-top: 50px;
+    display: inline-block;
+    padding: 13px 35px;
+    border-radius: 25px;
+    color: #FFFFFF;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-2:hover {
+    background-color: #EF8700;
+}
+
+.btn-3 {
+    display: inline-block;
+    padding: 5px 25px;
+    background-color: #ff9000;
+    color: #FFFFFF;
+    border-radius: 10px;
+}
+
+.btn-3:hover {
+    background-color: #EF8700;
+}
