--- a/style.css
+++ b/style.css
@@ -356,26 +356,74 @@ p{
  /* footer */
 
  .footer {
-    padding: 50px 0;
+    width: 100%;
+    height: auto;
     background-color: #ff9000; 
+    padding-bottom: 50px;
  }
 
- .footer-content {
-    display: flex;
-    justify-content: space-between;
+ .footer .logo-f {
+    width: 100%;
+    height: 200px;
+    margin-top: 15px;
+    text-align: center; 
+ }
+ .footer .logo-f img{
+    margin-top: 30px;
+    width:auto;
+    height: 100px;
+    text-align: center; 
+ }
+ .footer .contain-main-footer{
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 8px;
+    display: inline-flex;
+    height: auto;
+ }
+ .footer .contain-main-footer .descarga img{
+    margin-top: 50px;
+    width: 100%;
+    height: 50px;
+    
+ }
+ .footer .contain-main-footer .contact,
+ .footer .contain-main-footer .descarga,
+ .footer .contain-main-footer .location
+ {
+    width: 29%;
+    height: 350px;
+    padding: 0px 3.5%;
+    color: #2d2d2c;
+    font-weight: 300;
+ }
+ .footer .contain-main-footer .contact address ul{
+    list-style:none;
+ }
+ .footer .contain-main-footer .contact li{
+    padding: 5px 0px 5px 20px;
+
  }
 
- .link h3 {
-    font-size: 18px;
-    margin-bottom: 15px;
+ .footer .contain-main-footer .descarga{
+    border-right: 1px solid #FFFFFF;
+    border-left: 1px solid #FFFFFF;
+ }
+ .footer .copy-right{
+    margin-top: 50px;
+    width: 100%;
+    height: 35px;
+    background-color: #f4d6d6;
+    opacity: 0.87;
+    font-size: 19px;
+    text-align: center;
+    line-height: 40px;
+    color: #a6a6a0;
+ }
+ .footer .contain-main-footer h4{
     color: #FFFFFF;
- }
-
- .link a {
-    color: #FFFFFF;
-    font-size: 16px;
-    display: block;
-    margin-bottom: 10px;
+    font-weight: 600;
+    padding-bottom: 25px;
  }
 
  /* responsive  */
