--- a/style.css
+++ b/style.css
@@ -353,63 +353,136 @@ p{
     width: 450px;
 }
 
+.app-link:hover {
+    cursor: pointer; 
+    filter: brightness(1.9); 
+}
+
+
  /* footer */
 
- .footer {
+.footer {
     width: 100%;
     height: auto;
-    background-color: #ff9000; 
+    background-color: #ff9000;
     padding-bottom: 50px;
- }
+}
 
- .footer .logo-f {
+.footer .logo-f {
     width: 100%;
     height: 200px;
     margin-top: 15px;
-    text-align: center; 
- }
- .footer .logo-f img{
+    text-align: center;
+}
+
+.footer .logo-f img {
     margin-top: 30px;
-    width:auto;
+    width: auto;
     height: 100px;
-    text-align: center; 
- }
- .footer .contain-main-footer{
+    text-align: center;
+}
+
+.footer .contain-main-footer {
     width: 80%;
     margin-left: 10%;
     margin-top: 8px;
     display: inline-flex;
     height: auto;
- }
- .footer .contain-main-footer .descarga img{
-    margin-top: 50px;
-    width: 100%;
-    height: 50px;
-    
- }
- .footer .contain-main-footer .contact,
- .footer .contain-main-footer .descarga,
- .footer .contain-main-footer .location
- {
-    width: 29%;
-    height: 350px;
-    padding: 0px 3.5%;
-    color: #2d2d2c;
+}
+
+.footer .contain-main-footer h4 {
+    font-size: 20px;
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: 600;
+    padding-bottom: 25px;
+}
+
+.footer .contain-main-footer .descarga {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer .contain-main-footer .descarga h4 {
+    font-size: 20px;
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.footer .contain-main-footer .descarga img {
+    display: block;
+    margin: 0;
+}
+
+.footer .contain-main-footer .descarga img:hover {
+    cursor: pointer; 
+    filter: brightness(1.9); 
+}
+
+.footer .contain-main-footer .siguenos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer .contain-main-footer .siguenos h4 {
+    font-size: 20px;
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.footer .contain-main-footer .siguenos i {
+    display: block;
+    margin: 0;
+    font-size: 30px;
+    margin-bottom: 5px;
+    justify-content: flex-start;
+}
+
+.footer .contain-main-footer .siguenos i:hover {
+    cursor: pointer; 
+    color: #f8f81286; 
+}
+
+
+.footer .contain-main-footer .contact,
+.footer .contain-main-footer .siguenos,
+.footer .contain-main-footer .descarga,
+.footer .contain-main-footer .location {
+    width: 33%;
+    height: 320px;
+    margin-top: 0px;
+    padding: 0px 2.5%;
+}
+
+.footer .contain-main-footer  address ul {
+    list-style: none;
+    padding-bottom: 20px;
+}
+
+.footer .contain-main-footer li {
+    padding: 5px 20px 5px 20px;
+}
+
+.footer .contain-main-footer li i,
+.footer .contain-main-footer {
+    color: #4c4c4b;
     font-weight: 300;
- }
- .footer .contain-main-footer .contact address ul{
-    list-style:none;
- }
- .footer .contain-main-footer .contact li{
-    padding: 5px 0px 5px 20px;
+    font-style: normal;
+    font-size: 12px;
+}
 
- }
+.footer .contain-main-footer .descarga {
+    border-right: 1.3px solid #FFFFFF;
+    border-left: 1.3px solid #FFFFFF;
+}
 
- .footer .contain-main-footer .descarga{
-    border-right: 1px solid #FFFFFF;
-    border-left: 1px solid #FFFFFF;
- }
- .footer .copy-right{
+.footer .copy-right {
     margin-top: 50px;
     width: 100%;
     height: 35px;
@@ -419,12 +492,19 @@ p{
     text-align: center;
     line-height: 40px;
     color: #a6a6a0;
- }
- .footer .contain-main-footer h4{
+}
+
+.footer .contain-main-footer h4 {
     color: #FFFFFF;
     font-weight: 600;
     padding-bottom: 25px;
- }
+}
+
+.footer .contain-main-footer .location iframe {
+    width: 110%;
+    margin: 0px 5%;
+    height: 260px;
+}
 
  /* responsive  */
 
