--- a/style.css
+++ b/style.css
@@ -37,6 +37,25 @@ body {font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
     font-weight: 800;   
 }
+
+.btn-ingreso {
+    background-color: #ff9000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn-ingreso:hover {
+    background-color: #ef8700c0;
+}
+
+
+
 .menu .navbar  ul li {
     position: relative;
     float: left;
