--- a/style.css
+++ b/style.css
@@ -378,67 +378,67 @@ p{
 }
 
 
- /* footer */
-
+/* footer */
 .footer {
-    width: 100%;
-    height: auto;
     background-color: #ff9000;
-    padding-bottom: 50px;
-}
-
-.footer .logo-f {
-    width: 100%;
-    height: 200px;
-    margin-top: 15px;
+    padding: 50px 0;
     text-align: center;
 }
 
 .footer .logo-f img {
-    margin-top: 30px;
-    width: auto;
-    height: 100px;
-    text-align: center;
-}
-
-.footer .contain-main-footer {
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 8px;
-    display: inline-flex;
+    max-width: 100%;
     height: auto;
 }
 
-.footer .contain-main-footer h4 {
-    font-size: 20px;
+.footer .contain-main-footer {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 8px auto;
+}
+
+.footer h4 {
+    font-size: 28px;
     color: #FFFFFF;
-    text-align: center;
-    font-weight: 600;
+    font-weight: 800;
     padding-bottom: 25px;
+    text-align: center;
+}
+
+#contact-title {
+    font-size: 28px; 
+    color: #FFFFFF;
+    font-weight: 800;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+
+.footer .descarga, .footer .siguenos, .footer .contact, .footer .location {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+}
+.footer .contain-main-footer .siguenos i {
+    font-size: 50px; 
+}
+
+.footer .descarga img:hover, .footer .siguenos i:hover {
+    cursor: pointer;
+    filter: brightness(1.9);
+    color: #f8f81286;
+}
+
+.footer .siguenos i {
+    font-size: 30px;
+    margin: 0;
+    margin-bottom: 5px;
 }
 
 .footer .contain-main-footer .descarga {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.footer .contain-main-footer .descarga h4 {
-    font-size: 20px;
-    color: #FFFFFF;
-    text-align: center;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-.footer .contain-main-footer .descarga img {
-    display: block;
-    margin: 0;
-}
-
-.footer .contain-main-footer .descarga img:hover {
-    cursor: pointer; 
-    filter: brightness(1.9); 
 }
 
 .footer .contain-main-footer .siguenos {
@@ -447,64 +447,34 @@ p{
     align-items: center;
 }
 
-.footer .contain-main-footer .siguenos h4 {
-    font-size: 20px;
-    color: #FFFFFF;
-    text-align: center;
-    font-weight: 600;
-    margin-bottom: 10px;
+.footer .contain-main-footer .location iframe {
+    width: 100%;
+    height: 260px;
 }
 
-.footer .contain-main-footer .siguenos i {
-    display: block;
-    margin: 0;
-    font-size: 30px;
-    margin-bottom: 5px;
-    justify-content: flex-start;
-}
-
-.footer .contain-main-footer .siguenos i:hover {
-    cursor: pointer; 
-    color: #f8f81286; 
-}
-
-
-.footer .contain-main-footer .contact,
-.footer .contain-main-footer .siguenos,
-.footer .contain-main-footer .descarga,
-.footer .contain-main-footer .location {
-    width: 33%;
-    height: 320px;
-    margin-top: 0px;
-    padding: 0px 2.5%;
-}
-
-.footer .contain-main-footer  address ul {
+.footer .contain-main-footer ul {
     list-style: none;
     padding-bottom: 20px;
 }
 
 .footer .contain-main-footer li {
-    padding: 5px 20px 5px 20px;
-}
-
-.footer .contain-main-footer li i,
-.footer .contain-main-footer {
+    padding: 5px 20px;
     color: #4c4c4b;
     font-weight: 300;
     font-style: normal;
     font-size: 12px;
 }
 
-.footer .contain-main-footer .descarga {
-    border-right: 1.3px solid #FFFFFF;
-    border-left: 1.3px solid #FFFFFF;
+.footer .contact h4 {
+    font-size: 20px;
+}
+
+.footer .contact li {
+    font-size: 19px; 
 }
 
 .footer .copy-right {
     margin-top: 50px;
-    width: 100%;
-    height: 35px;
     background-color: #f4d6d6;
     opacity: 0.87;
     font-size: 19px;
@@ -513,23 +483,11 @@ p{
     color: #a6a6a0;
 }
 
-.footer .contain-main-footer h4 {
-    color: #FFFFFF;
-    font-weight: 600;
-    padding-bottom: 25px;
-}
-
-.footer .contain-main-footer .location iframe {
-    width: 110%;
-    margin: 0px 5%;
-    height: 260px;
-}
 
  /* responsive  */
 
-   /* header */
-
- @media (max-width:991px) {
+ /* header */
+@media (max-width: 991px) {
     .menu {
         padding: 20px;
     }
@@ -591,82 +549,92 @@ p{
     .header-img img {
         width: 300px;
     }
-     /* breakfast */
+}
 
-    .breakfast{
-        padding: 30px;
-    }
-    .breakfast-content{
-        flex-direction: column;
-        align-items: center;
-    }
-    .breakfast-1{
-        justify-content: space-between;
-        padding: 10px 55px;
-        width: 100%;
-        margin-bottom: 25px;
-    }
+/* breakfast */
+.breakfast{
+    padding: 30px;
+}
+.breakfast-content{
+    flex-direction: column;
+    align-items: center;
+}
+.breakfast-1{
+    justify-content: space-between;
+    padding: 10px 55px;
+    width: 100%;
+    margin-bottom: 25px;
+}
 
-    /* informacion */
+/* informacion */
+.info{
+    padding: 30px;
+}
+.info-content{
+    flex-direction: column;
+}
+.info-img{
+    width: 100%;
+    text-align: center;
+}
+.info-img img {
+    width: 250px;
+    margin-left: 0;
+}
+.info-txt {
+    width: 100%;
+    text-align: center;
+}
 
-    .info{
-        padding: 30px;
-    }
-    .info-content{
-        flex-direction: column;
-    }
-    .info-img{
-        width: 100%;
-        text-align: center;
-    }
-    .info-img img {
-        width: 250px;
-        margin-left: 0;
-    }
-    .info-txt {
-        width: 100%;
-        text-align: center;
-    }
-          
-    /* productos */
+/* productos */
+.products {
+    padding: 30px;
+}
+.box-container {
+    margin-top: 25px;
+}
 
-    .products {
-        padding: 30px;
-    }
-    .box-container {
-        margin-top: 25px;
-    }
+/* app */
+.app {
+    flex-direction: column;
+    padding: 30px;
+}
+.app-txt {
+    width: 100%;
+    text-align: center;
+}
+.descarga{
+    flex-direction: column;
+    align-items: center;
+}
+.app-img {
+    width: 100%;
+    text-align: center;
+}
+.app-img img {
+    width: 300px;
+}
 
-    /* app */
-    .app {
-        flex-direction: column;
-        padding: 30px;
-    }
-    .app-txt {
-        width: 100%;
-        text-align: center;
-    }
-    .descarga{
-        flex-direction: column;
-        align-items: center;
-    }
-    .app-img {
-        width: 100%;
-        text-align: center;
-    }
-    .app-img img {
-        width: 300px;
-    }
-       /* footer */
+/* footer */
+@media (max-width: 991px) {
     .footer {
         padding: 30px;
     }
-    .footer-content {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    
- }
 
- 
+    .footer .contain-main-footer {
+        flex-direction: column;
+    }
+
+    .footer .contain-main-footer .contact,
+    .footer .contain-main-footer .siguenos,
+    .footer .contain-main-footer .descarga,
+    .footer .contain-main-footer .location {
+        width: 100%;
+        padding: 20px 0;
+    }
+
+    .footer .contain-main-footer .location iframe {
+        height: 200px;
+    }
+}
+
